# POC-Sound-To-Text

./: .gitignore  AGENTS.md  README.md  RESEARCH  pyproject.toml  silero_vad_model.pt  test_websocket.html
app/: main.py
app/clients/: __init__.py  stt_client.py
app/routers/: transcribe_router.py
app/schemas/: transcribe_schema.py
app/services/: __init__.py  noisereduce.py  silerovad.py  transcribe.py  vad.py
docs/: TECHNICAL_ARCHITECTURE.md  VOICE_TO_TEXT_IMPLEMENTATION_BRIEF.md
docs/research/: README.md  noise-reduction-research.md  silero-vad-research.md
