[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[uvicorn]>=0.129.0",
    "faster-whisper>=1.2.1",
    "ffmpeg-python>=0.2.0",
    "jwt>=1.4.0",
    "numpy>=2.3.5",
    "openai-whisper>=20250625",
    "pydantic>=2.12.5",
    "pydub>=0.25.1",
    "PyJWT>=2.8.0",
    "python-dotenv>=1.0.0",
    "reactivex>=4.0.4",
    "requests>=2.31.0",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "uvicorn[standard]>=0.40.0",
    "websockets>=16.0",
]
