[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "pydantic",
    "pydub",
    "PyJWT",
    "python-dotenv",
    "reactivex",
    "requests",
    "sounddevice",
    "soundfile",
    "uvicorn[standard]",
    "websockets",
    "fastapi",
    "python-jose",
    "argparse",
    "silero-vad",
    "torch>=2.10.0",
    "scipy>=1.17.1",
    "langdetect",
]
